--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
         <ul class="footer-social">
           <li>
             <a href="https://www.facebook.com/"target = "_blank">
-              <img src="images/icons/facebook.svg" alt="KeSha on Facebook">
+              <img src='images/icons/facebook.svg' alt="KeSha on Facebook">
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/"target = "_blank">
-              <img src="images/icons/instagram.svg" alt="KeSha on Instagram">
+              <img src='images/icons/instagram.svg' alt="KeSha on Instagram">
             </a>
           </li>
           <li>
             <a href="https://www.youtube.com/"target = "_blank">
-              <img src="images/icons/youtube.svg" alt="KeSha on Youtube">
+              <img src='images/icons/youtube.svg' alt="KeSha on Youtube">
             </a>
           </li>
           <li>
             <a href="https://twitter.com/"target = "_blank">
-              <img src="images/icons/twitter.svg" alt="KeSha on Twitter">
+              <img src='images/icons/twitter.svg' alt="KeSha on Twitter">
             </a>
           </li>
         </ul>
